--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -89,7 +89,7 @@
     </head>
 
     <body>
-        <h1>Todo List - Made using Node and Made by Tush@r</h1>
+        <h1>Made by Tush@r</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
@@ -102,7 +102,7 @@
 
         <form action="/todo/add/" method="post">
             <p>
-                <label for="newtodo">What should I do?</label>
+                <label for="newtodo">Please tell me about conditions?</label>
                 <input type="text" name="newtodo" id="newtodo" autofocus />
                 <input type="submit" value="Add" />
             </p>
