--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -102,7 +102,7 @@
 
         <form action="/todo/add/" method="post">
             <p>
-                <label for="newtodo">Please tell me about conditions??</label>
+                <label for="newtodo">Please tell me about conditions?</label>
                 <input type="text" name="newtodo" id="newtodo" autofocus />
                 <input type="submit" value="Add" />
             </p>
